tests/baselines/reference/node10AlternateResult_noResolution.errors.txt
error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.
/index.ts(1,21): error TS2307: Cannot find module 'pkg' or its corresponding type declarations.
  There are types at '/node_modules/pkg/definitely-not-index.d.ts', but this result could not be resolved under your current 'moduleResolution' setting. Consider updating to 'node16', 'nodenext', or 'bundler'.


!!! error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107:   Visit https://aka.ms/ts6 for migration information.
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "1.0.0",
        "exports": {
            ".": "./definitely-not-index.js"
        }
    }
    
==== /node_modules/pkg/definitely-not-index.d.ts (0 errors) ====
    export {};
    
==== /index.ts (1 errors) ====
    import { pkg } from "pkg";
                        ~~~~~
!!! error TS2307: Cannot find module 'pkg' or its corresponding type declarations.
!!! error TS2307:   There are types at '/node_modules/pkg/definitely-not-index.d.ts', but this result could not be resolved under your current 'moduleResolution' setting. Consider updating to 'node16', 'nodenext', or 'bundler'.
    